# MetaCFD

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  metacfd_sandbox
include/MetaCFD/: metacfd.hpp
include/MetaCFD/Algorithms/: refine_mesh.hpp
include/MetaCFD/BuildingBlocks/CFDSolvers/: MOOD_Solver.hpp
include/MetaCFD/BuildingBlocks/mesh/: StructuredMesh.hpp
include/MetaCFD/BuildingBlocks/riemannsolvers/: HLLCRiemannSolver.hpp
include/MetaCFD/Concepts/: CellComplex.hpp  Default.hpp  Manifold.hpp  OutputProvider.hpp  Quantity.hpp  Unit.hpp  Vector.hpp
include/MetaCFD/Concepts/algebra/: RationalNumber.hpp
include/MetaCFD/Concepts/physics/: Quantity.hpp  Unit.hpp
include/MetaCFD/buildingblocks/mediums/: IdealGas.hpp
include/MetaCFD/buildingblocks/methods/: FiniteVolumeSolver.hpp
include/MetaCFD/concepts/: Manifold.hpp  Quantity.hpp  Vector.hpp  VectorQuantity.hpp  traits.hpp
include/MetaCFD/concepts/algebra/: DirectedGraph.hpp  Matrix.hpp  RealNumber.hpp
include/MetaCFD/concepts/geometry/: EuclidianSpace.hpp  Vector.hpp
vs2015/: vs2015.sln
vs2015/sandbox/: main.cpp  sandbox.vcxproj  sandbox.vcxproj.filters
